--- a/META.yml
+++ b/META.yml
@@ -7,6 +7,7 @@ abstract: installing and finding script.aculo.us
 license: perl
 requires:
   Archive::Tar: 0
+  Test::Exception: 0
 generated_by: Module::Build version 0.2805
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
