--- a/META.yml
+++ b/META.yml
@@ -7,6 +7,8 @@ abstract: installing and finding script.aculo.us
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
+requires:
+  perl: 5.6.0
 build_requires:
   Archive::Tar: 0
   Test::Exception: 0
