--- a/META.yml
+++ b/META.yml
@@ -8,6 +8,7 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
+  Alien::Prototype: 1.5.1.2
   perl: 5.6.0
 build_requires:
   Archive::Tar: 0
