--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Alien-scriptaculous
-version: 1.7.1.2_03
+version: 1.8.0.1
 author:
   - Graham TerMarsch (cpan@howlingfrog.com)
 abstract: installing and finding script.aculo.us
@@ -8,7 +8,7 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
-  Alien::Prototype: 1.5.1.2
+  Alien::Prototype: 1.6.0
   perl: 5.6.0
 build_requires:
   Archive::Tar: 0
@@ -16,7 +16,7 @@ build_requires:
 provides:
   Alien::scriptaculous:
     file: lib/Alien/scriptaculous.pm
-    version: 1.7.1.2_03
+    version: 1.8.0.1
 generated_by: Module::Build version 0.2805
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
