--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,12 @@
 ---
 name: Alien-scriptaculous
-version: 1.8.0.1
+version: 1.8.0.2
 author:
   - Graham TerMarsch (cpan@howlingfrog.com)
 abstract: installing and finding script.aculo.us
 license: perl
 resources:
-  license: http://dev.perl.org/licenses/
+  license: ~
 requires:
   Alien::Prototype: 1.6.0
   perl: 5.6.0
@@ -16,8 +16,8 @@ build_requires:
 provides:
   Alien::scriptaculous:
     file: lib/Alien/scriptaculous.pm
-    version: 1.8.0.1
-generated_by: Module::Build version 0.2805
+    version: 1.8.0.2
+generated_by: Module::Build version 0.32
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
