Move to GitHub.
I suspect that this is, "move and go die" but that's ok; this is so old
and has not been maintained, that it's allowed to go die now.

--- a/META.yml
+++ b/META.yml
@@ -24,5 +24,11 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
 version: v1.8.0.2
+x_bugtracker:
+  web: https://github.com/bleargh45/Alien-scriptaculous/issues
 x_deprecated: 1
+x_repository:
+  type: git
+  url: git://github.com/bleargh45/Alien-scriptaculous.git
+  web: https://github.com/bleargh45/Alien-scriptaculous
 x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
